fixed overflow on loader

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-html {
+/* html {
     overflow: auto;
-}
-
-/* body {
-    overflow: hidden;
 } */
+
+body {
+    overflow: hidden;
+}
 
 .no-js #loader { display: none;  }
 .js #loader { display: block; position: absolute; left: 100px; top: 0; }
